--- a/development.ini
+++ b/development.ini
@@ -1,11 +1,11 @@
 #
-# mdemos.server - Pylons development environment configuration
+# moksha - Pylons development environment configuration
 #
 # The %(here)s variable will be replaced with the parent directory of this file
 #
 # This file is for deployment specific config options -- other configuration
-# that is always required for the app is done in the config directory,
-# and generally should not be modified by end users.
+# that is always required for the app is done in the config directory, 
+# and generally should not be modified by end users. 
 
 [DEFAULT]
 debug = true
@@ -16,19 +16,20 @@ error_email_from = paste@localhost
 
 [server:main]
 use = egg:Paste#http
-host = 127.0.0.1
+host = 0.0.0.0
 port = 8080
-
-[sa_auth]
-cookie_secret = 85fd6257-b823-4113-a2c6-93362bd8afad
 
 [app:main]
 use = egg:mdemos.server
 full_stack = true
 #lang = ru
 cache_dir = %(here)s/data
-beaker.session.key = mdemos.server
-beaker.session.secret = 85fd6257-b823-4113-a2c6-93362bd8afad
+beaker.session.key = moksha
+beaker.session.secret = somesecret
+
+beaker.cache.type = memory
+#beaker.cache.type = ext:memcached
+#beaker.cache.url = localhost:11211
 
 # If you'd like to fine-tune the individual locations of the cache data dirs
 # for the Cache data, or the Session saves, un-comment the desired settings
@@ -36,10 +37,129 @@ beaker.session.secret = 85fd6257-b823-4113-a2c6-93362bd8afad
 #beaker.cache.data_dir = %(here)s/data/cache
 #beaker.session.data_dir = %(here)s/data/sessions
 
+##
+## Moksha-specific configuration options
+##
+
+# moksha.domain - Domain used for XSS communication.
+#
+# If your webapp and orbited live on app.live.example.com,
+# just set this to app.live.example.com and you're done.
+#
+# If your webapp lives on app.live.example.com and orbited lives on
+# orbited.live.example.com, you need to set this to a suffix of the two, like:
+# moksha.domain = live.example.com
+#
+moksha.domain = localhost
+
+
+# Enable the Moksha Extension Point Middleware
+moksha.extensionpoints = True
+
+# Number of seconds between polling feeds
+feed.poll_frequency = 35
+# Where to store the feed caches.
+#feed_cache = sqlite:///%(here)s/feeds.db
+# Max age (in seconds) of each feed in the cache
+feed.max_age = 300
+# Timeout in seconds for the web request
+feed.timeout = 60
+# The number of simultaneous connections
+feed.deferred_groups = 3
+
+# Where to initialize and store our application databases.  %s is the app name.
+app_db = sqlite:///%s.db
+
+# Note: for postgres/mysql, these app-specific dbs needs to be created by hand
+#app_db = postgres://moksha:m0ksh4@localhost/%s
+
+
+##
+## Moksha Live Socket configuration
+##
+
+# Automatically inject the Moksha live socket with
+# the Global Resource Injection Widget
+moksha.livesocket = True
+
+# The backing protocol for live widgets.
+# Available backends: stomp, amqp, websocket
+moksha.livesocket.backend = stomp
+
+# TODO -- change the following two to 'livesocket' from socket
+# jGrowl notifications for socket state changes
+moksha.socket.notify = True
+
+# How often should the client websocket attempt to reconnect if
+# the moksha-hub goes away?  Reconnection attempts are disabled
+# if this is unspecified.
+#moksha.socket.reconnect_interval = 5000
+
+# Only required for websocket
+moksha.livesocket.websocket.port = 9998
+
+# The location of our Orbited server
+orbited_host = localhost
+orbited_port = 9000
+orbited_scheme = http
+
+# Stomp broker configuration.
+# By default we use the MorbidQ broker, run by Orbited, for development.
+stomp_broker = localhost
+stomp_port = 61613
+stomp_user = guest
+stomp_pass = guest
+
+# Optional AMQP Broker
+#amqp_broker = guest/guest@localhost
+#amqp_broker_host = localhost
+#amqp_broker_port = 5672
+#amqp_broker_user = guest
+#amqp_broker_pass = guest
+#amqp_broker_ssl = False
+
+## Optional zeroMQ pub/sub pattern
+#zmq_enabled = True
+#zmq_publish_endpoints = tcp://*:6543
+#zmq_subscribe_endpoints = tcp://127.0.0.1:6543
+#
+## Force zeromq topic subscription to only forward messages whose
+## topics strictly match.
+#zmq_strict = True
+#
+### The hub can subscribe by either zmq bind or zmq connect.
+##zmq_subscribe_method = connect
+
+# Metrics app enabled?
+mdemos.metrics.stream = True
+
+# What backend to use for the feeds app?
+mdemos.feeds.feedtree.engine = live
+
+# Documentation directory
+docs_dir = docs
+# docs_dir = /srv/moksha/docs
+
+chat.backend = irc://irc.freenode.net:6667
+chat.rooms = default
+chat.default.staticRoomName = moksha
+chat.default.roomAssignmentMode = static
+chat.default.display.greeting = Moksha Chat
+
+# Use a built-in IRC server
+#chat.backend = irc://localhost:9999
+#chat.builtin = true
+#chat.default.display.floating = true
+#chat.default.display.floatingToggle = false
+#chat.default.display.width = 400
+#chat.default.display.height = 300
+#chat.default.display.theme = simple
+#chat.default.display.resizable = true
+
 # pick the form for your database
 # %(here) may include a ':' character on Windows environments; this can
 # invalidate the URI when specifying a SQLite db via path name
-# sqlalchemy.url=postgres://username:password@hostname:port/databasename
+# sqlalchemy.url=postgres://username:password:port@hostname/databasename 
 # sqlalchemy.url=mysql://username:password@hostname:port/databasename
 
 
@@ -47,35 +167,9 @@ beaker.session.secret = 85fd6257-b823-4113-a2c6-93362bd8afad
 # in development
 
 sqlalchemy.url = sqlite:///%(here)s/devdata.db
-#echo shouldn't be used together with the logging module.
-sqlalchemy.echo = false
+sqlalchemy.echo = true
 sqlalchemy.echo_pool = false
 sqlalchemy.pool_recycle = 3600
-
-# This line ensures that Genshi will render xhtml when sending the
-# output. Change to html or xml, as desired.
-templating.genshi.method = xhtml
-
-# if you are using Mako and want to be able to reload
-# the mako template from disk during the development phase
-# you should say 'true' here
-# This option is only used for mako templating engine
-# WARNING: if you want to deploy your application using a zipped egg
-# (ie: if your application's setup.py defines zip-safe=True, then you
-# MUST put "false" for the production environment because there will
-# be no disk and real files to compare time with.
-# On the contrary if your application defines zip-safe=False and is
-# deployed in an unzipped manner, then you can leave this option to true
-templating.mako.reloadfromdisk = true
-
-# the compiled template dir is a directory that must be readable by your
-# webserver. It will be used to store the resulting templates once compiled
-# by the TemplateLookup system.
-# During development you generally don't need this option since paste's HTTP
-# server will have access to you development directories, but in production
-# you'll most certainly want to have apache or nginx to write in a directory
-# that does not contain any source code in any form for obvious security reasons.
-templating.mako.compiled_templates_dir = %(here)s/data/templates
 
 # WARNING: *THE LINE BELOW MUST BE UNCOMMENTED ON A PRODUCTION ENVIRONMENT*
 # Debug mode will enable the interactive debugging tool, allowing ANYONE to
@@ -87,12 +181,10 @@ templating.mako.compiled_templates_dir = %(here)s/data/templates
 # Uses python's logging config file format
 # http://docs.python.org/lib/logging-config-fileformat.html
 
-#turn this setting to "min" if you would like tw to produce minified
-#javascript files (if your library supports that)
-toscawidgets.framework.resource_variant=debug
+templating.mako.compiled_templates_dir = %(here)s/data/templates
 
 [loggers]
-keys = root, mdemos.server, sqlalchemy, auth
+keys = root, moksha, sqlalchemy, tg, auth, pylons
 
 [handlers]
 keys = console
@@ -105,10 +197,27 @@ keys = generic
 level = INFO
 handlers = console
 
-[logger_mdemos.server]
+[logger_moksha]
 level = DEBUG
 handlers =
-qualname = mdemos.server
+qualname = moksha
+
+[logger_tg]
+level = INFO
+handlers =
+qualname = tg
+
+# repoze.who is noisy by default
+[logger_auth]
+level = WARNING
+handlers =
+qualname = auth
+
+
+[logger_pylons]
+level = INFO
+handlers =
+qualname = pylons
 
 [logger_sqlalchemy]
 level = INFO
@@ -117,14 +226,6 @@ qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
 # "level = DEBUG" logs SQL queries and results.
 # "level = WARN" logs neither.  (Recommended for production systems.)
-
-
-# A logger for authentication, identification and authorization -- this is
-# repoze.who and repoze.what:
-[logger_auth]
-level = WARN
-handlers =
-qualname = auth
 
 # If you create additional handlers, add them as a key to [handlers]
 [handler_console]
