Revert "Default to zmq+websockets."
This reverts commit 2505d3d5558badcb6591e0c9339e47b35123267c.

--- a/development.ini
+++ b/development.ini
@@ -84,7 +84,7 @@ moksha.livesocket = True
 
 # The backing protocol for live widgets.
 # Available backends: stomp, amqp, websocket
-moksha.livesocket.backend = websocket
+moksha.livesocket.backend = stomp
 
 # TODO -- change the following two to 'livesocket' from socket
 # jGrowl notifications for socket state changes
@@ -103,12 +103,12 @@ orbited_host = localhost
 orbited_port = 9000
 orbited_scheme = http
 
-## Stomp broker configuration.
-## By default we use the MorbidQ broker, run by Orbited, for development.
-#stomp_broker = localhost
-#stomp_port = 61613
-#stomp_user = guest
-#stomp_pass = guest
+# Stomp broker configuration.
+# By default we use the MorbidQ broker, run by Orbited, for development.
+stomp_broker = localhost
+stomp_port = 61613
+stomp_user = guest
+stomp_pass = guest
 
 # Optional AMQP Broker
 #amqp_broker = guest/guest@localhost
@@ -118,17 +118,17 @@ orbited_scheme = http
 #amqp_broker_pass = guest
 #amqp_broker_ssl = False
 
-# Optional zeroMQ pub/sub pattern
-zmq_enabled = True
-zmq_publish_endpoints = tcp://*:6543
-zmq_subscribe_endpoints = tcp://127.0.0.1:6543
-
-# Force zeromq topic subscription to only forward messages whose
-# topics strictly match.
-zmq_strict = True
-
-## The hub can subscribe by either zmq bind or zmq connect.
-#zmq_subscribe_method = connect
+## Optional zeroMQ pub/sub pattern
+#zmq_enabled = True
+#zmq_publish_endpoints = tcp://*:6543
+#zmq_subscribe_endpoints = tcp://127.0.0.1:6543
+#
+## Force zeromq topic subscription to only forward messages whose
+## topics strictly match.
+#zmq_strict = True
+#
+### The hub can subscribe by either zmq bind or zmq connect.
+##zmq_subscribe_method = connect
 
 # Metrics app enabled?
 mdemos.metrics.stream = True
