--- a/development.ini
+++ b/development.ini
@@ -98,6 +98,9 @@ moksha.socket.reconnect_interval = 5000
 # Only required for websocket
 moksha.livesocket.websocket.port = 9998
 
+# Allow sending messages from client to server
+moksha.livesocket.websocket.client2server = True
+
 ## The location of our Orbited server
 #orbited_host = localhost
 #orbited_port = 9000
