Allow non-strict topic matching for demo.

--- a/development.ini
+++ b/development.ini
@@ -128,7 +128,7 @@ zmq_subscribe_endpoints = tcp://127.0.0.1:6543
 
 # Force zeromq topic subscription to only forward messages whose
 # topics strictly match.
-zmq_strict = True
+zmq_strict = False
 
 ## The hub can subscribe by either zmq bind or zmq connect.
 #zmq_subscribe_method = connect
